# CrazyBlazin

./: .gitignore  Dockerfile  README.md  cards_words.txt  config.py  database.txt  db_test.py  gifts.pkl  main.py  minimal.py  musicdatabase.txt  patchnotes.txt  pyproject.toml  restart.bat  rewards.txt  run.sh  snippets.py  sshd_config  start_all.py  test.py  testinglog.json  testinglog.txt  users.txt
.github/workflows/: docker-image.yml
New_beginning/dev/: add_remote.py  main.py  test.py
card_game/: cardsystem.py
cogs/: help.py
cogs/coin_commands/: __init__.py  balance.py  leaderboard.py  reset_coins.py
cogs/coin_tasks/: __init__.py  give_coins_task.py  manage_multiplier_task.py
cogs/fun_commands/: __init__.py  pikk_response.py
cogs/game/: __init__.py  lotto.py  roulette.py  slot_machine.py  tic_tac_toe.py
cogs/utility/: __init__.py  uptime.py
config/: config.py
crazybot/: main.py  webservice.py
crazybot/config/: config.py
crazybot/simulations/: slot_machine.py
crazybot/tests/: test_main.py
crazybot/utils/: dbhandler.py  queries.py
data/: coins.db
economy_bot/: CB_manager.py  cbm.py
economy_bot/dev/: cbm_dev.py  cocaine.txt  crazy_blazin_database – Kopi.txt  crazy_blazin_database.txt  test.py  webpage.txt
even_newer/: auto_updater.py  database.txt  main.py  musicdatabase.txt  musicdatabaseBACKUP.txt  start_all.py  test.py
even_newer/web/: musicdatabase.txt  server.py
images/: kris_slave
oilbaron_game/: begin.sh  config.py  learn.txt  main.py  oilbarrels.txt  serve.py  test.py  users.txt  whatwehave.txt
oilbaron_game/templates/: index.html  nolonger.html
old_builds/economy_bot/: cbm.py
react-slot-machine/: package-lock.json  package.json  server.js
react-slot-machine/src/: App.js  App.test.js  Callback.js  LoginWithDiscord.js  SlotMachine.css  SlotMachine.js
tests/: test_dbhandler.py
tools/: activitydb.py  animepaint.py  cardsystem.py  database.py  database_main.py  painting.py
utils/: awd.py  dbhandler.py  github_con.py  signal_handler.py
web/: server.py
web/templates/: bosses.html  cards.html  (+6 more)
webhook/: main.py
(+67 files in other folders)
