[tool.poetry]
name = "discordbb"
version = "1.5.0"
description = ""
authors = ["Martin Røvang <martinrovang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
beartype = "^0.19.0"
toml = "^0.10.2"
loguru = "^0.7.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
nox = "^2024.4.15"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
